--- a/boards/shields/eyelash_sofle/eyelash_sofle_central_dongle.conf
+++ b/boards/shields/eyelash_sofle/eyelash_sofle_central_dongle.conf
@@ -8,6 +8,7 @@ CONFIG_ZMK_DISPLAY=y
 
 #EXT POWER
 CONFIG_ZMK_EXT_POWER=y
+CONFIG_ZMK_SLEEP=n
 
 #BLE-passkey
 CONFIG_ZMK_BLE_PASSKEY_ENTRY=n
@@ -37,8 +38,6 @@ CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_FETCHING=y
 
 # Enable SPI
 CONFIG_SPI=y
-#EXT POWER
-CONFIG_ZMK_EXT_POWER=y
 
 #EC11 enable
 CONFIG_EC11=y
